--- a/index.html
+++ b/index.html
@@ -6,7 +6,52 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="work-sans-font">
+    <header class="bg-color">
+        <nav class="navbar display-flex">
+            <h3 class="brand">G3 Architects</h3>
+            <ul class="nav-links display-flex">              
+                 <li class="nav-item"><a href="" class="nav-link">Home</a></li>
+                 <li class="nav-item"><a href="" class="nav-link">About</a></li>
+                 <li class="nav-item"><a href="" class="nav-link">Contact Us</a></li>
+                 <li class="nav-item"><a href="" class="nav-link">Login</a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+           <div class="banner-content">
+            <h3 class="banner-title">Brand New 
+                Group of Architects 
+                </h3>
+            <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <button class="btn-primary">Explore More</button>
+           </div>
+            <img class="banner-img" src="images/banner.png" alt="">
+        </div>
+    </header>
     
+
+    <main>
+         <section class="teams display-flex">
+            <div class="team-img-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+
+
+            <div class="team-features">
+                <h3 class="feature-title"><span id="quick-list">Quick list</span> <span>of Our</span> <span class="text-primary">Features</span></h3>
+                <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+
+         </section>
+    </main>
+
+
+    <footer>
+
+    </footer>
 </body>
 </html>
