add second section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>G3 Architects</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="work-sans-font">
@@ -47,6 +47,53 @@
             </div>
 
          </section>
+
+         <section>
+        <!-- Fact part -->
+        <h3 class="some-fact">Some Facts</h3>
+        <p class="feature-description fact-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+
+          <div class="fact-container">
+            <!-- .fact-card*4>img.fact-icon+h4.fact-number+h5.fact-name -->
+            <div class="fact-card display-flex">
+                <div class="">
+                    <img src="images/icons/ribon.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">50</h4>
+                    <h5 class="fact-name">Awards Winnings</h5>
+                </div>
+            </div>
+
+
+            <div class="fact-card display-flex">
+                <div class="">
+                    <img src="images/icons/projects.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">1458</h4>
+                    <h5 class="fact-name">Project Finished</h5>
+                </div>
+            </div>
+
+
+           <div class="fact-card display-flex">
+            <div class="">
+                <img src="images/icons/customers.png" alt="" class="fact-icon">
+                <h4 class="fact-number">590</h4>
+                <h5 class="fact-name">Clients Worked</h5>
+            </div>
+           </div>
+
+
+            <div class="fact-card display-flex">
+                <div class="">
+                    <img src="images/icons/email.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">22578</h4>
+                    <h5 class="fact-name">Email Send</h5>
+                </div>
+            </div>
+            
+          </div>
+
+         </section>
+
     </main>
 
 
