--- a/index.html
+++ b/index.html
@@ -94,6 +94,21 @@
 
          </section>
 
+
+         <section class="our-sponspors">
+          <div class="sponspors-info">
+         <h3 class="section-title">Our Sponspors</h3>
+         <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+         </div>
+
+          <div class="sponspors-companies">
+            <img src="images/sponsors/spotify.png" alt="">
+            <img src="images/sponsors/amazon.png" alt="">
+            <img src="images/sponsors/google.png" alt="">
+            <img src="images/sponsors/telerama.png" alt="">
+            <img src="images/sponsors/figma.png" alt="">
+          </div>
+         </section>
     </main>
 
 
