--- a/index.html
+++ b/index.html
@@ -48,6 +48,43 @@
 
          </section>
 
+        <section class="features display-flex">
+            <div class="">
+                <h3 id="features-b" class="feature-title">Features you will <br> love & enjoy</h3>
+            <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            
+<!-- feature card section -->
+
+              <div class="feature-card">
+                <h4 class="feature-h">Dexktop & Mobile Version</h4>
+                <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+              </div>           
+              <div class="feature-card">
+                <h4 class="feature-h">Dexktop & Mobile Version</h4>
+                <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+              </div>           
+              <div class="feature-card">
+                <h4 class="feature-h">Dexktop & Mobile Version</h4>
+                <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+              </div>           
+              <div class="feature-card">
+                <h4 class="feature-h">Dexktop & Mobile Version</h4>
+                <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+              </div>           
+            </div>
+
+
+            <div class="features-architect">
+                <img src="images/architect.png" alt="">
+                <button id="experience-badge" class="btn-primary">
+                    <span id="experience-year">10+Year</span>
+                    <br>
+                    <span>Experience</span>
+                </button>
+            </div>
+        </section>
+
+
          <section>
         <!-- Fact part -->
         <h3 class="some-fact">Some Facts</h3>
@@ -112,8 +149,8 @@
     </main>
 
 
-    <footer>
-
+    <footer id="feature-footer" class="bg-color">
+      <p class="feature-description">All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 </body>
 </html>
